--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "d3": "^5.12.0",
+    "esri-leaflet": "^2.3.1",
+    "jquery": "^3.4.1",
+    "leaflet": "^1.5.1",
+    "popper.js": "^1.15.0",
     "react": "^16.9.0",
+    "react-app-polyfill": "^1.0.3",
     "react-dom": "^16.9.0",
+    "react-leaflet": "^2.4.0",
     "react-scripts": "3.1.2"
   },
   "scripts": {
