--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.3",
     "react-dom": "^16.9.0",
+    "react-ionicons": "^3.0.1",
     "react-leaflet": "^2.4.0",
     "react-scripts": "3.1.2"
   },
