--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "r6-wq-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mmtang.github.io/r6-water-quality",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "d3": "^5.12.0",
     "esri-leaflet": "^2.3.1",
+    "gh-pages": "^2.1.1",
     "jquery": "^3.4.1",
     "leaflet": "^1.5.1",
     "popper.js": "^1.16.0",
