--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "r6-wq-dashboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://mmtang.github.io/r6-water-quality",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "d3": "^5.12.0",
@@ -16,6 +17,8 @@
     "react-scripts": "3.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -28,9 +31,11 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie 11"
     ],
     "development": [
+      "ie 11",
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
